# pay_card

./: build.gradle
sdk/: build.gradle
sdk/src/main/java/cards/pay/paycardsrecognizer/sdk/: ScanCardIntent.java
sdk/src/main/java/cards/pay/paycardsrecognizer/sdk/camera/: CameraConfigurationUtils.java  RecognitionAvailabilityChecker.java
sdk/src/main/java/cards/pay/paycardsrecognizer/sdk/camera/widget/: CameraPreviewLayout.java
sdk/src/main/java/cards/pay/paycardsrecognizer/sdk/ndk/: RecognitionResult.java
sdk/src/main/java/cards/pay/paycardsrecognizer/sdk/ui/: InitLibraryFragment.java  ScanCardActivity.java  ScanCardFragment.java  ScanCardRequest.java
sdk/src/main/res/layout/: wocr_fragment_scan_card.xml
sdk/src/main/res/layout-sw600dp/: wocr_fragment_scan_card.xml
sdk/src/main/res/layout-sw600dp-land/: wocr_fragment_scan_card.xml
sdk/src/main/res/values/: color.xml  strings.xml  styles.xml
sdk/src/main/res/values-hy/: strings.xml
sdk/src/main/res/values-ru/: strings.xml
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/caffe/: CMakeLists.txt
src/main/cpp/crossplatform/: CMakeLists.txt
src/main/cpp/eigen/: CMakeLists.txt
src/main/cpp/libyuv/: CMakeLists.txt
src/main/cpp/opencv2/sdk/native/jni/: OpenCVConfig.cmake
src/main/cpp/opencv2/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules.cmake
src/main/cpp/opencv2/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake
src/main/java/cards/pay/paycardsrecognizer/sdk/camera/: ImageAnalyzer.java
src/main/java/cards/pay/paycardsrecognizer/sdk/ui/: InitLibraryFragment.java  ScanCardFragment.java
